Add adding machine

--- a/client/src/app/machines/machines.component.html
+++ b/client/src/app/machines/machines.component.html
@@ -1,5 +1,7 @@
 <h3>Machines</h3>
 
+<button class="btn btn-success" routerLink="/machines/add">Add machine</button>
+
 <table class="table table-hover">
     <thead>
       <tr>
