Add adding containers

--- a/client/src/app/machines/machine-details/machine-details.component.html
+++ b/client/src/app/machines/machine-details/machine-details.component.html
@@ -4,6 +4,8 @@
     <div><b>State: </b> {{machine.state}}</div>
     <div><b>Value: </b> {{machine.value}}</div>
 
+    <button class="btn btn-success" routerLink="./add-container">Add container</button>
+
     <div>Containers: </div>
 
     <table class="table">
