--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -28,5 +28,5 @@
         <label for="a3">Operator</label>
     </div>
 
-    <button class="btn btn-success" type="submit" (click)="onRegister()">Login</button>
+    <button class="btn btn-success" type="submit" (click)="onRegister()">Register</button>
 </form>
