--- a/client/src/app/machines/machine-details/machine-details.component.html
+++ b/client/src/app/machines/machine-details/machine-details.component.html
@@ -23,7 +23,7 @@
                 <th scope="row">{{machine.id}}</th>
                 <td>{{machine.eat.name}}</td>
                 <td>{{machine.eat.price}}</td>
-                <td>{{machine.fixedLoadingTime}}</td>
+                <td>{{machine.fixedLoadingTime | date : 'short'}}</td>
                 <td>{{machine.isEmpty}}</td>
             </tr>
         </tbody>
