--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -13,6 +13,9 @@
                 <li class="nav-item" *ngIf="authenticated">
                     <a class="nav-link" routerLink="machines">Machines</a>
                 </li>
+                <li class="nav-item" *ngIf="authenticated">
+                    <a class="nav-link" routerLink="eat/add">Add Eat</a>
+                </li>
             </ul>
         </div>
         <div class="d-flex" *ngIf="!authenticated; else logout">
