One more hot fix

--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -16,15 +16,15 @@
 
     <div class="input-group mb-3" *ngIf="isAuthenticated">
         <input formControlName="role" id="a1" type="radio" placeholder="Username"
-            aria-label="Username" aria-describedby="basic-addon1" value="1">
+            aria-label="Username" aria-describedby="basic-addon1" value="Admin">
         <label for="a1">Admin</label>
 
         <input formControlName="role" id="a2" type="radio" placeholder="Username"
-            aria-label="Username" aria-describedby="basic-addon1" value="2">
+            aria-label="Username" aria-describedby="basic-addon1" value="Customer">
         <label for="a2">Customer</label>
 
         <input formControlName="role" id="a3" type="radio" placeholder="Username"
-            aria-label="Username" aria-describedby="basic-addon1" value="3">
+            aria-label="Username" aria-describedby="basic-addon1" value="Operator">
         <label for="a3">Operator</label>
     </div>
 
