--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -1,47 +1,46 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" routerLink="">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+  <div class="container-fluid">
+    <a class="navbar-brand" routerLink="">{{'TEST' | translate}}</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item" *ngIf="isAdmin">
-                    <a class="nav-link" routerLink="register">Register user</a>
-                </li>
-                <li class="nav-item" *ngIf="authenticated">
-                    <a class="nav-link" routerLink="machines">Machines</a>
-                </li>
-                <li class="nav-item" *ngIf="authenticated">
-                    <a class="nav-link" routerLink="eat/add">Add Eat</a>
-                </li>
-            </ul>
-        </div>
-        <div class="d-flex" *ngIf="!authenticated; else logout">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" routerLink="login">Login</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" routerLink="register">Register</a>
-                </li>
-            </ul>
-        </div>
-
-        <ng-template #logout>
-            <div class="d-flex">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <span class="nav-link">{{name}}</span>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#" (click)="onLogout()">Logout</a>
-                    </li>
-                </ul>
-            </div>
-        </ng-template>
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item" *ngIf="isAdmin">
+          <a class="nav-link" routerLink="register">Register user</a>
+        </li>
+        <li class="nav-item" *ngIf="authenticated">
+          <a class="nav-link" routerLink="machines">Machines</a>
+        </li>
+        <li class="nav-item" *ngIf="authenticated">
+          <a class="nav-link" routerLink="eat/add">Add Eat</a>
+        </li>
+      </ul>
     </div>
+    <div class="d-flex">
+      <ul class="navbar-nav mb-2 mb-lg-0">
+        <li class="nav-item" (click)="changeLanguage()">
+          <span style="cursor: pointer" class="nav-link">{{language ? 'en' : 'ua'}}</span>
+        </li>
+        <ng-container *ngIf="!authenticated; else logout">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" routerLink="login">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" routerLink="register">Register</a>
+          </li>
+        </ng-container>
+      </ul>
+    </div>
+
+    <ng-template #logout>
+      <li class="nav-item">
+        <span style="cursor: pointer"  class="nav-link">{{name}}</span>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" aria-current="page" href="#" (click)="onLogout()">Logout</a>
+      </li>
+    </ng-template>
+  </div>
 </nav>
