--- a/mobile/app/src/main/res/layout/activity_machine_container_list.xml
+++ b/mobile/app/src/main/res/layout/activity_machine_container_list.xml
@@ -15,7 +15,7 @@
     <FrameLayout
         android:id="@+id/container_fragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/machine_spinner"
         />
 
