--- a/mobile/app/src/main/res/layout/fragment_container_item_list.xml
+++ b/mobile/app/src/main/res/layout/fragment_container_item_list.xml
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/machine_container_recycle_view"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/machine_container_recycle_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/buy_button"
+        android:layout_width="200sp"
+        android:layout_height="50sp"
+        android:text="@string/buy"
+        android:layout_below="@+id/machine_container_recycle_view"
+        android:layout_centerHorizontal="true"
+        />
+
+</RelativeLayout>
+
