--- a/client/src/app/add-container/add-container.component.html
+++ b/client/src/app/add-container/add-container.component.html
@@ -2,12 +2,12 @@
     <div class="form-check mb-3">
         <input class="form-check-input" type="checkbox" formControlName="isEmpty" id="isEmpty">
         <label class="form-check-label" for="isEmpty">
-            Is Empty
+          {{'IS_EMPTY' | translate}}
         </label>
     </div>
 
     <div class="input-group mb-3">
-        Fixed Loading Time: 
+      {{'LOADING TIME' | translate}}:
         <input required type="datetime-local" formControlName="fixedLoadingTime" name="trip-start">
     </div>
 
@@ -17,5 +17,5 @@
         </select>
     </div>
 
-    <button class="btn btn-success" type="submit" (click)="onAddContainer()">Add machine</button>
+    <button class="btn btn-success" type="submit" (click)="onAddContainer()">{{'ADD_MACHINE' | translate}}</button>
 </form>
