--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="">{{'TEST' | translate}}</a>
+    <a class="navbar-brand" routerLink="">Pay And Give</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -8,13 +8,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item" *ngIf="isAdmin">
-          <a class="nav-link" routerLink="register">Register user</a>
+          <a class="nav-link" routerLink="register">{{ 'REGISTER_USER' | translate }}</a>
         </li>
         <li class="nav-item" *ngIf="authenticated">
-          <a class="nav-link" routerLink="machines">Machines</a>
+          <a class="nav-link" routerLink="machines">{{ 'MACHINES' | translate}}</a>
         </li>
         <li class="nav-item" *ngIf="authenticated">
-          <a class="nav-link" routerLink="eat/add">Add Eat</a>
+          <a class="nav-link" routerLink="eat/add">{{ 'ADD_EAT' | translate }}</a>
         </li>
       </ul>
     </div>
@@ -25,10 +25,10 @@
         </li>
         <ng-container *ngIf="!authenticated; else logout">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" routerLink="login">Login</a>
+            <a class="nav-link" aria-current="page" routerLink="login">{{ 'LOGIN' | translate }}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" routerLink="register">Register</a>
+            <a class="nav-link" aria-current="page" routerLink="register">{{'REGISTER' | translate}}</a>
           </li>
         </ng-container>
       </ul>
@@ -36,10 +36,10 @@
 
     <ng-template #logout>
       <li class="nav-item">
-        <span style="cursor: pointer"  class="nav-link">{{name}}</span>
+        <span style="cursor: pointer" class="nav-link">{{name}}</span>
       </li>
       <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="#" (click)="onLogout()">Logout</a>
+        <a class="nav-link" aria-current="page" href="#" (click)="onLogout()">{{'LOGOUT' | translate}}</a>
       </li>
     </ng-template>
   </div>
