--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,12 +1,12 @@
 <form class="w-50" [formGroup]="form">
     <div class="input-group mb-3">
-        <input formControlName="login" type="text" class="form-control" placeholder="Username" aria-label="Username"
+        <input formControlName="login" type="text" class="form-control" placeholder="{{'USERNAME' | translate}}" aria-label="Username"
             aria-describedby="basic-addon1">
     </div>
     <div class="input-group mb-3">
-        <input formControlName="password" type="password" class="form-control" placeholder="Password" aria-label="Username"
+        <input formControlName="password" type="password" class="form-control" placeholder="{{'PASSWORD' | translate}}" aria-label="Username"
             aria-describedby="basic-addon1">
     </div>
 
-    <button class="btn btn-success" type="submit" (click)="onLogin()">Login</button>
+    <button class="btn btn-success" type="submit" (click)="onLogin()">{{'LOGIN' | translate}}</button>
 </form>
