--- a/client/src/app/machines/add-machine/add-machine.component.html
+++ b/client/src/app/machines/add-machine/add-machine.component.html
@@ -13,5 +13,5 @@
             aria-describedby="basic-addon1">
     </div>
 
-    <button class="btn btn-success" type="submit" (click)="onAddMachine()">Add machine</button>
+    <button class="btn btn-success" type="submit" (click)="onAddMachine()">{{'ADD_MACHINE' | translate}}</button>
 </form>
