--- a/client/src/app/machines/machines.component.html
+++ b/client/src/app/machines/machines.component.html
@@ -1,14 +1,14 @@
 <h3>Machines</h3>
 
-<button class="btn btn-success" routerLink="/machines/add">Add machine</button>
+<button class="btn btn-success" routerLink="/machines/add">{{ 'ADD_MACHINE' | translate }}</button>
 
 <table class="table table-hover">
     <thead>
       <tr>
         <th scope="col">#</th>
-        <th scope="col">State</th>
-        <th scope="col">Value</th>
-        <th scope="col">Containers</th>
+        <th scope="col">{{'STATE' | translate}}</th>
+        <th scope="col">{{'VALUE' | translate}}</th>
+        <th scope="col">{{'CONTAINERS' | translate}}</th>
       </tr>
     </thead>
     <tbody>
