--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,32 +1,32 @@
 <form class="w-50" [formGroup]="form">
     <div class="input-group mb-3">
-        <input formControlName="login" type="text" class="form-control" placeholder="Username" aria-label="Username"
+        <input formControlName="login" type="text" class="form-control" placeholder="{{'USERNAME' | translate}}" aria-label="Username"
             aria-describedby="basic-addon1">
     </div>
 
     <div class="input-group mb-3">
-        <input formControlName="name" type="text" class="form-control" placeholder="Name" aria-label="Username"
+        <input formControlName="name" type="text" class="form-control" placeholder="{{'NAME' | translate}}" aria-label="Username"
             aria-describedby="basic-addon1">
     </div>
 
     <div class="input-group mb-3">
-        <input formControlName="password" type="password" class="form-control" placeholder="Password"
+        <input formControlName="password" type="password" class="form-control" placeholder="{{'PASSWORD' | translate}}"
             aria-label="Username" aria-describedby="basic-addon1">
     </div>
 
     <div class="input-group mb-3" *ngIf="isAuthenticated">
-        <input formControlName="role" id="a1" type="radio" placeholder="Username"
+        <input formControlName="role" id="a1" type="radio" placeholder="{{'USERNAME' | translate}}"
             aria-label="Username" aria-describedby="basic-addon1" value="Admin">
-        <label for="a1">Admin</label>
+        <label for="a1">{{'ADMIN' | translate}}</label>
 
-        <input formControlName="role" id="a2" type="radio" placeholder="Username"
+        <input formControlName="role" id="a2" type="radio" placeholder="{{'USERNAME' | translate}}"
             aria-label="Username" aria-describedby="basic-addon1" value="Customer">
-        <label for="a2">Customer</label>
+        <label for="a2">{{'CUSTOMER' | translate}}</label>
 
-        <input formControlName="role" id="a3" type="radio" placeholder="Username"
+        <input formControlName="role" id="a3" type="radio" placeholder="{{'USERNAME' | translate}}"
             aria-label="Username" aria-describedby="basic-addon1" value="Operator">
-        <label for="a3">Operator</label>
+        <label for="a3">{{'OPERATOR' | translate}}</label>
     </div>
 
-    <button class="btn btn-success" type="submit" (click)="onRegister()">Register</button>
+    <button class="btn btn-success" type="submit" (click)="onRegister()">{{'REGISTER' | translate}}</button>
 </form>
