--- a/client/src/app/add-container/add-container.component.html
+++ b/client/src/app/add-container/add-container.component.html
@@ -7,7 +7,7 @@
     </div>
 
     <div class="input-group mb-3">
-      {{'LOADING TIME' | translate}}:
+      {{'LOADING_TIME' | translate}}:
         <input required type="datetime-local" formControlName="fixedLoadingTime" name="trip-start">
     </div>
 
