fix deleted containers view

--- a/client/src/app/machines/machine-details/machine-details.component.html
+++ b/client/src/app/machines/machine-details/machine-details.component.html
@@ -26,7 +26,7 @@
                 <td>{{machine.eat.name}}</td>
                 <td>{{machine.eat.price}}</td>
                 <td>{{machine.fixedLoadingTime | date : 'short'}}</td>
-                <td>{{machine.isEmpty}}</td>
+                <td>{{machine.isDeleted}}</td>
             </tr>
         </tbody>
     </table>
