--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="input-group mb-3">
-        <input formControlName="name" type="text" class="form-control" placeholder="{{'NAME' | translate}}" aria-label="Username"
+        <input formControlName="name" type="text" class="form-control" placeholder="{{'LOGIN' | translate}}" aria-label="Username"
             aria-describedby="basic-addon1">
     </div>
 
