--- a/client/src/app/rate-map/rate-map.component.html
+++ b/client/src/app/rate-map/rate-map.component.html
@@ -1,15 +1,13 @@
 <div class="dropdown">
   <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
-    Dropdown button
+    {{"SELECT_EAT" | translate}}
   </button>
   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
     <a class="dropdown-item" *ngFor="let eat of eats$ | async" (click)="onSelectEat(eat.name)">{{eat.name}}</a>
   </div>
 </div>
 <div >
-  {{containers$ |async|json}}
-
   <google-chart
     [type]="myType"
     [columns]="columnNames"
