--- a/client/src/app/machines/machines.component.html
+++ b/client/src/app/machines/machines.component.html
@@ -1,4 +1,4 @@
-<h3>Machines</h3>
+<h3>{{'MACHINES' | translate}}</h3>
 
 <button class="btn btn-success" routerLink="/machines/add">{{ 'ADD_MACHINE' | translate }}</button>
 
