--- a/client/src/app/add-container/add-container.component.html
+++ b/client/src/app/add-container/add-container.component.html
@@ -23,5 +23,5 @@
     </select>
   </div>
 
-    <button class="btn btn-success" type="submit" (click)="onAddContainer()">{{'ADD_MACHINE' | translate}}</button>
+    <button class="btn btn-success" type="submit" (click)="onAddContainer()">{{'ADD_CONTAINER' | translate}}</button>
 </form>
